tests/derive/unit_structs.rs
use hecs::Bundle;

#[derive(Bundle)]
struct NamedUnit {}

#[derive(Bundle)]
struct TupleUnit();

#[derive(Bundle)]
struct Unit;

fn main() {}
